--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ application.properties
 /dist/
 /nbdist/
 /.nb-gradle/
+.gitignore
+.mvn/
+pom.xml
+src/main/java/
+src/main/resources/static/
+src/main/resources/templates/
+src/test/
