--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
+            <version>1.2.1.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
